--- a/Palindrome Server Side/css/style.css
+++ b/Palindrome Server Side/css/style.css
@@ -5,9 +5,9 @@
 
 body{
   font-family:'Bebas Neue';
-  background-image: linear-gradient(45deg, #93f1ff, #93b7f7, #9787FF, #D387FF, #FF87EF, #FF87B3);
+  background-image: linear-gradient(45deg, #93f1ff, #93b7f7, #9787FF, #c381e9, #d67dca, #e088a8);
   background-size: 400% 400%;
-  animation: change 10s infinite alternate;
+  animation: change 12s infinite alternate;
 }
 
 @keyframes change{
@@ -24,12 +24,13 @@ body{
 
 h1{
   letter-spacing: 4px;
-  font-size: 40px;
+  font-size: 70px;
   padding: 15px;
-  color: #fff;
-  border: 5px solid #ffe4c45c;;
+  color: #ffffff7a;
+  -webkit-text-stroke: 1px white;
+  border: 5px solid #ffffff;
   border-radius: 8px;
-  background-color: #d1e9e947;
+  background-color: #ffe4c447;
 }
 
 .form{
@@ -47,13 +48,26 @@ h1{
   height: 30px;
   border-radius: 2px;
   border: none;
+  padding-left: 4px;
 }
 
 .btn{
   height: 30px;
   width: 65px;
   border-radius: 2px;
-  border: none;
+  border: 2px solid #FFF;
+  color: #FFF;
   font-weight: bold;
-  background-color: bisque;
+  background-color: #ffe4c482;
 }
+
+/* .hidden{
+  display: none;
+} */
+
+#answer{
+  color: #FFF;
+  border-radius: 8px;
+  text-decoration: underline;
+  font-size: 40px;
+} 
