Added collaborator credits and some readme info

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,9 @@
+/***************************************
+======Project: Palindrome Checker======
+Made for Coding Challenge
+By: Juan Vistro
+***************************************/
+
 *,
 *:before,
 *:after {
